Fix body overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,7 +46,7 @@
         width: 0;
     }
     100% {
-        width: 20vw;
+        width: 50vw;
     }
 }
 
@@ -64,7 +64,7 @@
 
 @keyframes hideSidebarAnim {
     0% {
-        width: 20vw;
+        width: 50vw;
     }
     100% {
         width: 0;
